create tests to login feature